  .ps or .pdf to this .tex.depends file to ensure the final document is
  recompiled if a figure changes.
- -classic-display is not passed to recent mlpost versions which do not
  handle it
* function "latex" has been renamed to "picture_of_latex", the "latex" value
  is now the \LaTeX command which prints the LaTeX logo
- Added -latex option to specify the latex command
* The Melt tool no longer compiles and executes .ml files, only .mlt ones.
  The .ml files will be compiled by Ocamlbuild anyway if they are needed.

Latex library:
- packages used by commands in ~title, ~author, ~date and ~prelude of the
document function are now taken into account
- figure caption may be placed at the side (?side_caption)
- figures may be wide (?wide)
- wrapfigure, floatingfigure, subfloat
- beamer colors may be given using rgb values
- ~underscore argument for pseudocode verbatim function
- equation
- index_exponent
- variables (similar in use to LaTeX counters, but evaluated when
  pretty-printing the .tex file)
- empty, is_empty
- more delimiters, just_left, just_right, between
- index functionalities
- support of multicolumn via the 'layout' optional argument of 'array_line'
- Beamer columns
- and (many) various other latex commands

Other:
* module Version renamed to Melt_version
- man pages have been written, they are installed with "make install"
- fixed META file dependencies

Version 1.2.0
=============

Configuration, Compilation and Installation
- Default installation directory is now OCAMLLIB/melt, where OCAMLLIB is
either: the default installation directory of ocamlfind, or
the standard directory of caml if ocamlfind is not available.
- (bugfix) Do not link with mlpost if MLPOST = NO.

Melt tool and library:
- Add -latex file.tex option to Mlpost to compute prelude, if the tex file
already exists.
- Cairo support for Mlpost 0.7
* ?pdf argument for mlpost becomes ?mode
- -mlpost option
- -mlpost-no-prelude option

Preprocessor: